# tagentacle-py-core

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
tagentacle_py_core/: __init__.py  inbox.py  schema.py
tests/: test_inbox.py  test_lifecycle_events.py  test_smoke.py
